# ouroboros

./: .gitignore  BIBLE.md  README.md  WRITE_TEST.md  colab_launcher.py  pyproject.toml  tmp_add_reasoning.py  vps_launcher.py
docs/: RECOVERY.md
etc/: ouroboros.env
memory/: identity.md
memory/knowledge/: DISCORD_TASK_PLAYBOOK.md  EVOLUTION_CAPABILITY_SUMMARY.md
ouroboros/: agent.py  apply_patch.py  config.py  consciousness.py  context.py  hot_reload.py  llm.py  llm.py.bak  loop.py  memory.py  model_router.py  pricing.py  reasoning.py  resilience.py  resources.py  task_notify.py  utils.py  watchdog.py
ouroboros/channels/: __init__.py  discord_bot.py  discord_bridge.py  discord_client.py  openclaw_gateway.py
ouroboros/tools/: browser.py  codex_cli_prompts.py  codex_edit.py  control.py  core.py  file.py  knowledge.py  memory_layered.py  openclaw_adapter.py  openclaw_loader.py  registry.py  scheduler.py  search.py  shell.py  system_health.py  vision.py
prompts/: SYSTEM.md
scripts/: discord_bot.py  ouroboros-discord.service  preboot_check.py  snapshot.py  start_discord_bridge.py  test_discord.py
supervisor/: communications.py  discord.py  events.py  git_ops.py  launcher_discord.py  queue.py  state.py  telegram.py  workers.py
tests/: test_smoke.py
tmp/: patch_workers.py
