[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros"
version = "7.2.0"
description = "Ouroboros - A self-evolving AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "requests>=2.31.0",
    "python-telegram-bot>=20.7",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.95.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "discord.py>=2.3.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.7.0", "ruff>=0.0.280"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ouroboros*", "supervisor*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
